methods.basics.Methods.scala.error
Erreur de compilation :
Methods:6: error: forward reference extends over definition of variable comptage
    comptage = comptage +1
    ^