methods.basics.Methods.scala.code
var comptage = 0

def goAndGet() {
  while(!estSurBiscuit()){
    avance()
    comptage = comptage +1
  }
  prendBiscuit()
  porteBiscuit()
  for(compteur <- 1 to comptage){
    recule()
  }
  poseBiscuit()
  var comptage = 0
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}